Added config support for Azure SQL Added AzureSqlQuery attribute to differentiate between SQL Server queries and Azure SQL queries Added the Connections query for Azure SQL More renaming in support of Azure

--- a/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/Configuration/app.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/Configuration/app.config
@@ -19,5 +19,8 @@
         </excludes>
       </sqlServer>
     </sqlServers>
+    <azure>
+      <database name="CloudFtw" connectionString="Server=zzz,1433;Database=CloudFtw;User ID=NewRelic;Password=aaa;Trusted_Connection=false;Encrypt=true;Connection Timeout=30;" />
+    </azure>
   </newRelic>
 </configuration>
