--- a/src/NewRelic.Microsoft.SqlServer.Plugin/app.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/app.config
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 
 <configuration>
-  <configSections>
-    <section name="newRelic" type="NewRelic.Microsoft.SqlServer.Plugin.Configuration.NewRelicConfigurationSection, NewRelic.Microsoft.SqlServer.Plugin" />
-  </configSections>
-  <newRelic>
-    <!-- 
+	<configSections>
+		<section name="newRelic" type="NewRelic.Microsoft.SqlServer.Plugin.Configuration.NewRelicConfigurationSection, NewRelic.Microsoft.SqlServer.Plugin" />
+	</configSections>
+	<newRelic>
+		<!-- 
     licenseKey [Required]
     ==========
     Specify your New Relic license key.
@@ -16,9 +16,10 @@
     Specify the frequency of the polling in seconds.
     ######
     -->
-    <service licenseKey="YOUR_KEY_HERE" pollIntervalSeconds="60" />
-    <sqlServers>
-      <!-- 
+		<service licenseKey="YOUR_KEY_HERE" pollIntervalSeconds="60" />
+		<!-- List of SQL Server instances. Server 2008, 2008 R2, and 2012 supported. -->
+		<sqlServers>
+			<!-- 
       name [Required]
       ==========
       Unique (within this set) name of the SQL Server to be monitored. This name appears on the New Relic dashboard.
@@ -35,19 +36,35 @@
       Defaults to false
       ######
       -->
-      <sqlServer name="Production Database" connectionString="Server=.\SQLExpress;Database=master;Trusted_Connection=True;" includeSystemDatabases="false">
-        <!-- Include OR exclude database from metric gathering reporting.-->
-        <!-- includes [Optional]: Contains a set of database elements that define explicitly which databases will be included in metric gathering. -->
-        <!--        <includes>-->
-        <!-- name [Required]: Indicates the name of the desired database. -->
-        <!--          <database name="Northwind"/>-->
-        <!--        </includes>-->
-        <!-- excludes [Optional]: Contains a set of database elements that define explicitly which databases will be excluded from metric gathering. -->
-        <!--        <excludes>-->
-        <!-- name [Required]: Indicates the name of the database to exclude. -->
-        <!--          <database name="TestData"/>-->
-        <!--        </excludes>-->
-      </sqlServer>
-    </sqlServers>
-  </newRelic>
+			<sqlServer name="Production Database" connectionString="Server=.\SQLExpress;Database=master;Trusted_Connection=True;" includeSystemDatabases="false">
+				<!-- Include OR exclude database from metric gathering reporting.-->
+				<!-- includes [Optional]: Contains a set of database elements that define explicitly which databases will be included in metric gathering. -->
+				<!--        <includes>-->
+				<!-- name [Required]: Indicates the name of the desired database. -->
+				<!--          <database name="Northwind"/>-->
+				<!--        </includes>-->
+				<!-- excludes [Optional]: Contains a set of database elements that define explicitly which databases will be excluded from metric gathering. -->
+				<!--        <excludes>-->
+				<!-- name [Required]: Indicates the name of the database to exclude. -->
+				<!--          <database name="TestData"/>-->
+				<!--        </excludes>-->
+			</sqlServer>
+		</sqlServers>
+		<!-- List of Azure SQL databases. One per Azure SQL Database, not per Azure SQL Server. -->
+		<azure>
+			<!--
+      name [Required]
+      ==========
+      Unique (within this set) name of the Azure SQL Databases to be monitored. This name appears on the New Relic dashboard.
+      ##########
+    
+      connectionString [Required]
+      ======
+      Connection string to the Azure SQL Database.
+      ######
+      -->
+			<database name="Azure Cloud Database"
+					  connectionString="Server=tcp:{Azure SQL Server Name}.database.windows.net,1433;Database={Azure SQL Database Name};User ID={Azure SQL User Name}@{Azure SQL Server Name};Password={Password for User Name};Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" />
+		</azure>
+	</newRelic>
 </configuration>
