Added support for naming the Windows Service in the config file. This allows more than one instance to be installed at one time.

--- a/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/Configuration/app.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/Configuration/app.config
@@ -5,7 +5,7 @@
     <section name="newRelic" type="NewRelic.Microsoft.SqlServer.Plugin.Configuration.NewRelicConfigurationSection, NewRelic.Microsoft.SqlServer.Plugin" />
   </configSections>
   <newRelic>
-    <service licenseKey="FooGuid" pollIntervalSeconds="45" />
+    <service licenseKey="FooGuid" pollIntervalSeconds="45" serviceName="NewRelicSqlPlugin" />
     <sqlServers>
       <sqlServer name="Local" connectionString="Server=.;Database=master;Trusted_Connection=True;" includeSystemDatabases="true">
         <includes>
