Added SqlDMLActivity query to project and updated it to return rows grouped on Sql Handle and Query Hash. Updated AzureSqlDatabase to be responsible for massaging the data coming out of this query. What we want to calculate is the rate at which the total deltas for reads and writes are increasing, therefore we examine the result set and compare the execution count of each row (which represents a query denotated by the hash) against the previous instance of that query. We calculate the increase in execution count for all queries and then send back the summed values broken out into reads and writes. Added associated tests.

--- a/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Configuration\ServiceElement.cs" />
     <Compile Include="Configuration\Settings.cs" />
     <Compile Include="QueryTypes\AzureSqlDatabaseSummary.cs" />
+    <Compile Include="QueryTypes\SqlDmlActivity.cs" />
     <Compile Include="QueryTypes\MemoryViewNuma.cs" />
     <Compile Include="SqlEndpoint.cs" />
     <Compile Include="SqlServer.cs" />
@@ -179,6 +180,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Queries\MemoryView.Numa.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Queries\SqlDMLActivity.SqlServerAndAzureSQL.sql" />
   </ItemGroup>
   <Import Project="..\Common\NewRelic.Microsoft.SqlServer.Plugin.targets" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
