--- a/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Configuration\NewRelicConfigurationSection.cs" />
     <Compile Include="Configuration\ServiceElement.cs" />
     <Compile Include="Configuration\Settings.cs" />
+    <Compile Include="QueryTypes\AzureServiceInterruptionEvents.cs" />
     <Compile Include="QueryTypes\AzureSqlDatabaseSummary.cs" />
     <Compile Include="QueryTypes\SqlDmlActivity.cs" />
     <Compile Include="QueryTypes\MemoryViewNuma.cs" />
@@ -150,6 +151,7 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Queries\RecompileSummary.sql" />
+    <EmbeddedResource Include="Queries\ServiceInterruptionEvents.AzureSQL.sql" />
     <EmbeddedResource Include="Queries\SQL-NonSQL-IdleCPUUsage.sql" />
   </ItemGroup>
   <ItemGroup>
