Updating SqlDMLActivity Query to include Mike's improvements to performance, and grouping. Updating Plugin to better handle the possiblity of dealing with multiple results for a single SQLPlanHandle, StatementHash, CreateDate, and Query time. Execution Counts are now summed, which should fix the exceptions users were seeing when running against both Azure and On-Prem SQL. Modified tests to assert this behavior.
Updated ReadMe to include Uninstall instructions!

--- a/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
@@ -133,6 +133,9 @@
     <Compile Include="Core\SqlPoller.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\README.md">
+      <Link>README.md</Link>
+    </None>
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
