Improved the logging of errors. The console and SqlMonitor.log now contain simplified messages with adice for resolving the issue. Added a new ErrorDetailOutput.log which contains the stacktrace for the exception.

--- a/src/NewRelic.Microsoft.SqlServer.Plugin/log4net.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/log4net.config
@@ -4,7 +4,7 @@
   </configSections>
 
   <log4net>
-    <!-- ROOT logging is least privilagles so Debug will log Debug -thru- FATAL
+    <!-- ROOT logging is least privileges so Debug will log Debug -thru- FATAL
 				  WARN will log - thru - FATAL but exclude INFO, DEBUG
 				  YOU can trace your code by setting the Logging to WARN and 
 				  overriding your loghelper method using the EnumLogger.INFO 
@@ -21,15 +21,21 @@
       <appender-ref ref="ConsoleAppender" />
     </logger>
 
+    <!-- Verbose logging of exceptions. -->
+    <logger name="ErrorDetailOutput">
+      <level value="DEBUG" />
+      <appender-ref ref="ErrorDetailOutputFileAppender" />
+    </logger>
+
     <!-- Verbose logging of output from SQL queries. -->
     <logger name="VerboseSqlOutput">
-      <level value="DEBUG" /> <!-- Change to INFO for output to appear -->
+      <level value="DEBUG" />
       <appender-ref ref="VerboseSqlOutputFileAppender" />
     </logger>
 
     <!-- Verbose logging of metrics recorded and uploaded. -->
     <logger name="VerboseMetricOutput">
-      <level value="DEBUG" /> <!-- Change to INFO for output to appear -->
+      <level value="DEBUG" />
       <appender-ref ref="VerboseMetricOutputFileAppender" />
     </logger>
 
@@ -47,6 +53,19 @@
       <param name="StaticLogFileName" value="false" />
       <param name="MaxSizeRollBackups" value="1" />
       <param name="MaximumFileSize" value="2MB" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date [%thread] %-5level - %message%newline" />
+      </layout>
+    </appender>
+
+    <appender name="ErrorDetailOutputFileAppender" type="log4net.Appender.RollingFileAppender">
+      <param name="File" value="C:\ProgramData\New Relic\MicrosoftSQLServerPlugin\ErrorDetailOutput.log" />
+      <param name="AppendToFile" value="true" />
+      <param name="RollingStyle" value="Size" />
+      <param name="StaticLogFileName" value="false" />
+      <param name="MaxSizeRollBackups" value="1" />
+      <param name="MaximumFileSize" value="1MB" />
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date [%thread] %-5level - %message%newline" />
