--- a/src/NewRelic.Microsoft.SqlServer.Plugin/log4net.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/log4net.config
@@ -1,102 +1,123 @@
 <configuration>
-  <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
-  </configSections>
 
-  <log4net>
-    <!-- ROOT logging is least privileges so Debug will log Debug -thru- FATAL
+	<configSections>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+	</configSections>
+
+	<log4net>
+		<!-- ROOT logging is least privileges so Debug will log Debug -thru- FATAL
 				  WARN will log - thru - FATAL but exclude INFO, DEBUG
 				  YOU can trace your code by setting the Logging to WARN and 
 				  overriding your loghelper method using the EnumLogger.INFO 
 				  If you set the logging too DEBUG you will get all the service (Queries,ChangeSet) traces
 		-->
-    <!-- ALL, DEBUG, INFO, WARN, ERROR, FATAL, OFF -->
-    <root>
-      <level value="ALL" />
-    </root>
+		<!-- ALL, DEBUG, INFO, WARN, ERROR, FATAL, OFF -->
+		<root>
+			<level value="ALL" />
+			<!-- No Appender -->
+		</root>
 
-    <logger name="SqlMonitor">
-      <level value="ALL" />
-      <appender-ref ref="SqlFileAppender" />
-      <appender-ref ref="ConsoleAppender" />
-    </logger>
+		<logger name="SqlMonitor">
+			<level value="ALL" />
+			<appender-ref ref="SqlFileAppender" />
+			<appender-ref ref="ConsoleAppender" />
+		</logger>
 
-    <!-- Verbose logging of exceptions. -->
-    <logger name="ErrorDetailOutput">
-      <level value="DEBUG" />
-      <appender-ref ref="ErrorDetailOutputFileAppender" />
-    </logger>
+		<appender name="SqlFileAppender" type="log4net.Appender.RollingFileAppender">
+			<param name="File" value="C:\ProgramData\New Relic\MicrosoftSQLServerPlugin\SqlMonitor.log" />
+			<param name="AppendToFile" value="true" />
+			<param name="RollingStyle" value="Size" />
+			<param name="StaticLogFileName" value="false" />
+			<param name="MaxSizeRollBackups" value="1" />
+			<param name="MaximumFileSize" value="2MB" />
+			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date [%thread] %-5level - %message%newline" />
+			</layout>
+		</appender>
 
-    <!-- Verbose logging of output from SQL queries. -->
-    <logger name="VerboseSqlOutput">
-      <level value="DEBUG" />
-      <appender-ref ref="VerboseSqlOutputFileAppender" />
-    </logger>
+		<!-- ConsoleAppender -->
+		<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+			<layout type="log4net.Layout.PatternLayout">
+				<param name="ConversionPattern" value="%d [%t] %-5p %m%n" />
+			</layout>
+		</appender>
 
-    <!-- Verbose logging of metrics recorded and uploaded. -->
-    <logger name="VerboseMetricOutput">
-      <level value="DEBUG" />
-      <appender-ref ref="VerboseMetricOutputFileAppender" />
-    </logger>
+		<!-- Verbose logging of exceptions. -->
+		<logger name="ErrorDetailOutput">
+			<level value="DEBUG" />
+			<appender-ref ref="ErrorDetailOutputFileAppender" />
+		</logger>
 
-    <!-- ConsoleAppender -->
-    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
-      <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%d [%t] %-5p %m%n" />
-      </layout>
-    </appender>
+		<appender name="ErrorDetailOutputFileAppender" type="log4net.Appender.RollingFileAppender">
+			<param name="File" value="C:\ProgramData\New Relic\MicrosoftSQLServerPlugin\ErrorDetailOutput.log" />
+			<param name="AppendToFile" value="true" />
+			<param name="RollingStyle" value="Size" />
+			<param name="StaticLogFileName" value="false" />
+			<param name="MaxSizeRollBackups" value="1" />
+			<param name="MaximumFileSize" value="1MB" />
+			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date [%thread] %-5level - %message%newline" />
+			</layout>
+		</appender>
 
-    <appender name="SqlFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="C:\ProgramData\New Relic\MicrosoftSQLServerPlugin\SqlMonitor.log" />
-      <param name="AppendToFile" value="true" />
-      <param name="RollingStyle" value="Size" />
-      <param name="StaticLogFileName" value="false" />
-      <param name="MaxSizeRollBackups" value="1" />
-      <param name="MaximumFileSize" value="2MB" />
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level - %message%newline" />
-      </layout>
-    </appender>
+		<!-- Verbose logging of output from SQL queries. -->
+		<logger name="VerboseSqlOutput">
+			<level value="DEBUG" />
+			<appender-ref ref="VerboseSqlOutputFileAppender" />
+		</logger>
 
-    <appender name="ErrorDetailOutputFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="C:\ProgramData\New Relic\MicrosoftSQLServerPlugin\ErrorDetailOutput.log" />
-      <param name="AppendToFile" value="true" />
-      <param name="RollingStyle" value="Size" />
-      <param name="StaticLogFileName" value="false" />
-      <param name="MaxSizeRollBackups" value="1" />
-      <param name="MaximumFileSize" value="1MB" />
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level - %message%newline" />
-      </layout>
-    </appender>
+		<appender name="VerboseSqlOutputFileAppender" type="log4net.Appender.RollingFileAppender">
+			<param name="File" value="C:\ProgramData\New Relic\MicrosoftSQLServerPlugin\VerboseSqlOutput.log" />
+			<param name="AppendToFile" value="true" />
+			<param name="RollingStyle" value="Size" />
+			<param name="StaticLogFileName" value="false" />
+			<param name="MaxSizeRollBackups" value="1" />
+			<param name="MaximumFileSize" value="1MB" />
+			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date [%thread] %-5level - %message%newline" />
+			</layout>
+		</appender>
 
-    <appender name="VerboseSqlOutputFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="C:\ProgramData\New Relic\MicrosoftSQLServerPlugin\VerboseSqlOutput.log" />
-      <param name="AppendToFile" value="true" />
-      <param name="RollingStyle" value="Size" />
-      <param name="StaticLogFileName" value="false" />
-      <param name="MaxSizeRollBackups" value="1" />
-      <param name="MaximumFileSize" value="1MB" />
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level - %message%newline" />
-      </layout>
-    </appender>
+		<!-- Verbose logging of metrics recorded and uploaded. -->
+		<logger name="VerboseMetricOutput">
+			<level value="DEBUG" />
+			<appender-ref ref="VerboseMetricOutputFileAppender" />
+		</logger>
 
-    <appender name="VerboseMetricOutputFileAppender" type="log4net.Appender.RollingFileAppender">
-      <param name="File" value="C:\ProgramData\New Relic\MicrosoftSQLServerPlugin\VerboseMetricOutput.log" />
-      <param name="AppendToFile" value="true" />
-      <param name="RollingStyle" value="Size" />
-      <param name="StaticLogFileName" value="false" />
-      <param name="MaxSizeRollBackups" value="1" />
-      <param name="MaximumFileSize" value="1MB" />
-      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level - %message%newline" />
-      </layout>
-    </appender>
+		<appender name="VerboseMetricOutputFileAppender" type="log4net.Appender.RollingFileAppender">
+			<param name="File" value="C:\ProgramData\New Relic\MicrosoftSQLServerPlugin\VerboseMetricOutput.log" />
+			<param name="AppendToFile" value="true" />
+			<param name="RollingStyle" value="Size" />
+			<param name="StaticLogFileName" value="false" />
+			<param name="MaxSizeRollBackups" value="1" />
+			<param name="MaximumFileSize" value="1MB" />
+			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date [%thread] %-5level - %message%newline" />
+			</layout>
+		</appender>
 
-  </log4net>
+		<!-- Verbose logging of metrics recorded and uploaded. -->
+		<logger name="InstallOutput">
+			<level value="DEBUG" />
+			<appender-ref ref="InstallOutputFileAppender" />
+		</logger>
+
+		<appender name="InstallOutputFileAppender" type="log4net.Appender.RollingFileAppender">
+			<param name="File" value="C:\ProgramData\New Relic\MicrosoftSQLServerPlugin\InstallOutput.log" />
+			<param name="AppendToFile" value="true" />
+			<param name="RollingStyle" value="Size" />
+			<param name="StaticLogFileName" value="false" />
+			<param name="MaxSizeRollBackups" value="1" />
+			<param name="MaximumFileSize" value="1MB" />
+			<lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+			<layout type="log4net.Layout.PatternLayout">
+				<conversionPattern value="%date [%thread] %-5level - %message%newline" />
+			</layout>
+		</appender>
+
+	</log4net>
 </configuration>
