Improved logging in the console upon start up. Fixed issue where running the app 'as Administrator' effectively locked the log files, preventing some installations from writing to the logs. Changed experience when trying to install/start/etc without 'Run as Administrator' from an exception dump to a friendly warning with advice.

--- a/src/NewRelic.Microsoft.SqlServer.Plugin/log4net.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/log4net.config
@@ -38,8 +38,11 @@
 
 		<!-- ConsoleAppender -->
 		<appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+			<filter type="log4net.Filter.LevelRangeFilter">
+				<levelMin value="INFO" />
+			</filter>
 			<layout type="log4net.Layout.PatternLayout">
-				<param name="ConversionPattern" value="%d [%t] %-5p %m%n" />
+				<param name="ConversionPattern" value="%-5p %m%n" />
 			</layout>
 		</appender>
 
@@ -104,6 +107,7 @@
 		<logger name="InstallOutput">
 			<level value="DEBUG" />
 			<appender-ref ref="InstallOutputFileAppender" />
+			<appender-ref ref="ConsoleAppender" />
 		</logger>
 
 		<appender name="InstallOutputFileAppender" type="log4net.Appender.RollingFileAppender">
