Ticket #45996: Recompile SummaryMetric not working. Added support for metrics not based on a SQL Query. Added RecompileMaximums metric to support the Summary Metric on the dashboard.

--- a/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/NewRelic.Microsoft.SqlServer.Plugin.Tests.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/NewRelic.Microsoft.SqlServer.Plugin.Tests.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Configuration\ComponentDataRetrieverTests.cs" />
     <Compile Include="Configuration\ConfigurationParserTests.cs" />
     <Compile Include="Configuration\Log4NetTests.cs" />
-    <Compile Include="Configuration\SqlServerTests.cs" />
+    <Compile Include="Configuration\SqlServerEndpointTests.cs" />
     <Compile Include="Core\ExtensionsForAssemblyTests.cs" />
     <Compile Include="MetricMapperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
