Improving SQL logging for supportability. * Moved verbose SQL logging into a method for re-use. * Added step to SqlServerEndpoint to query the details of the SQL server and details about each database it will report metrics on. * Fixed error reporter that incorrectly reported the process as a Windows service when it is merely run from the command line. * Cleaned up unused code in QueryLocator

--- a/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/NewRelic.Microsoft.SqlServer.Plugin.csproj
@@ -83,6 +83,8 @@
     <Compile Include="MetricQuery.cs" />
     <Compile Include="QueryTypes\AzureServiceInterruptionEvents.cs" />
     <Compile Include="QueryTypes\AzureSqlDatabaseSummary.cs" />
+    <Compile Include="QueryTypes\SqlServerDetails.cs" />
+    <Compile Include="QueryTypes\DatabaseDetails.cs" />
     <Compile Include="QueryTypes\RecompileMaximums.cs" />
     <Compile Include="QueryTypes\SqlDmlActivity.cs" />
     <Compile Include="QueryTypes\MemoryViewNuma.cs" />
@@ -180,6 +182,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Queries\SqlDMLActivity.SqlServerAndAzureSQL.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Queries\ServerDetails.SqlServer.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Queries\DatabaseDetails.SqlServer.sql" />
   </ItemGroup>
   <Import Project="..\Common\NewRelic.Microsoft.SqlServer.Plugin.targets" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
