Added proxy configuration options, commented out.

--- a/src/NewRelic.Microsoft.SqlServer.Plugin/app.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/app.config
@@ -67,4 +67,16 @@
 					  connectionString="Server=tcp:{Azure SQL Server Name}.database.windows.net,1433;Database={Azure SQL Database Name};User ID={Azure SQL User Name}@{Azure SQL Server Name};Password={Password for User Name};Trusted_Connection=False;Encrypt=True;Connection Timeout=30;" />
 		</azure>
 	</newRelic>
+	<!-- When behind a proxy, use the following configuration to allow the agent to report metrics to New Relic. -->
+<!--	<system.net>-->
+<!--		<defaultProxy enabled="true" useDefaultCredentials="true">-->
+			<!-- Use only one of the following settings as appropriate for your proxy. -->
+
+			<!-- Uses the system default, as configured in 'Internet Options'. -->
+<!--			<proxy usesystemdefault="true" />-->
+			
+			<!-- Use a specific proxy. -->
+<!--			<proxy proxyaddress="http://111.222.333.444:8080"/>-->
+<!--		</defaultProxy>-->
+<!--	</system.net>-->
 </configuration>
