Updating Plugin with first pass of credentialed proxy support

--- a/src/NewRelic.Microsoft.SqlServer.Plugin/app.deploy.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/app.deploy.config
@@ -5,6 +5,26 @@
 		<section name="newRelic"
 		         type="NewRelic.Microsoft.SqlServer.Plugin.Configuration.NewRelicConfigurationSection, NewRelic.Microsoft.SqlServer.Plugin" />
 	</configSections>
+
+	<appSettings>
+		<!--
+			Proxy Settings [Optional]
+		
+			proxyAddress 
+				Defines the address of the target proxy
+		
+			username 
+				Defines the username to log onto the proxy. This name can be prefixed with the
+				appropriate domain for example "OFFICE\jsmith"
+		
+			password 
+				Defines the password for the above account, used when initiating a request through the proxy
+			
+			<add key="proxyAddress" value="http://proxyaddress"/>
+			<add key="username" value="OFFICE\jdoe"/>
+			<add key="password" value="p@ssw0rd"/>
+		-->		
+	</appSettings>
 	<newRelic>
 		<!-- 
 			licenseKey [Required]
@@ -93,4 +113,34 @@
 			-->
 		</azure>
 	</newRelic>
+	
+	<!--
+	Network Settings
+	================
+	
+	These settings are optional, but necessary to make the plugin work in environments that use a proxy server to communicate with the outside world.
+	
+	Example 1 - default credentials
+		<system.net>
+			<defaultProxy enabled="true" useDefaultCredentials="true">
+				<proxy usesystemdefault="True" bypassonlocal="True" />
+			</defaultProxy>
+		</system.net>
+	
+	
+	Example 2 - alternate credentials
+		<system.net>
+			<defaultProxy enabled="true" useDefaultCredentials="false">
+				<module type="NewRelic.Platform.Binding.DotNET.CustomProxy, NewRelic.Platform.Binding.DotNET"/>
+			</defaultProxy>
+		</system.net>
+	
+		Which will also require that you add proxyAddress, username and password to appSettings above. 
+		For example these values could be:
+		
+		<add key="proxyAddress" value="http://proxyaddress"/>
+		<add key="username" value="OFFICE\jdoe"/>
+		<add key="password" value="p@ssw0rd"/>
+	-->
+
 </configuration>
