Including updated versions of the .NET Platform SDK, which should now have better, easier to use support for proxy servers! Yay!
Added documentation (to our config that gets deployed) with instructions how to setup the configuration to work with proxy servers,
both when the default credentials are needed, or when further credentials must be specified.

--- a/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/NewRelic.Microsoft.SqlServer.Plugin.Tests.csproj
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin.Tests/NewRelic.Microsoft.SqlServer.Plugin.Tests.csproj
@@ -74,7 +74,11 @@
     <Compile Include="TestHelper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Configuration\app.config" />
+    <None Include="app.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
+    </None>
+    <EmbeddedResource Include="Configuration\Configuration.app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
