--- a/src/NewRelic.Microsoft.SqlServer.Plugin/app.deploy.config
+++ b/src/NewRelic.Microsoft.SqlServer.Plugin/app.deploy.config
@@ -8,21 +8,21 @@
 
 	<appSettings>
 		<!--
-			Proxy Settings [Optional]
+			Proxy Settings [Optional] - See Network Settings below for further explaination
 		
-			proxyAddress 
-				Defines the address of the target proxy
+				proxyAddress [Optional when using proxy with default credentials off]
+					Defines the address of the target proxy
 		
-			username 
-				Defines the username to log onto the proxy. This name can be prefixed with the
-				appropriate domain for example "OFFICE\jsmith"
+				proxyUsername [Required when using proxy with default credentials off]
+					Defines the username to log onto the proxy. This name can be prefixed with the
+					appropriate domain for example "OFFICE\jsmith"
 		
-			password 
-				Defines the password for the above account, used when initiating a request through the proxy
+				proxyPassword [Required when using proxy with default credentials off]
+					Defines the password for the above account, used when initiating a request through the proxy
 			
-			<add key="proxyAddress" value="http://proxyaddress"/>
-			<add key="username" value="OFFICE\jdoe"/>
-			<add key="password" value="p@ssw0rd"/>
+				<add key="proxyAddress" value="http://www.proxyaddress:5503"/>
+				<add key="proxyUsername" value="OFFICE\jdoe"/>
+				<add key="proxyPassword" value="p@ssw0rd"/>
 		-->		
 	</appSettings>
 	<newRelic>
@@ -121,6 +121,10 @@
 	These settings are optional, but necessary to make the plugin work in environments that use a proxy server to communicate with the outside world.
 	
 	Example 1 - default credentials
+
+		If the host machine is already configured to use the proxy and the credentials under which the plugin Windows Service is running can access the proxy,
+		Then all you have to do is tell the app to use the default proxy settings like so:
+
 		<system.net>
 			<defaultProxy enabled="true" useDefaultCredentials="true">
 				<proxy usesystemdefault="True" bypassonlocal="True" />
@@ -129,18 +133,27 @@
 	
 	
 	Example 2 - alternate credentials
+		
+		If the proxy requires login credentials different from those under which the plugin Windows Service is running, you will need to the following configuration.
+		The configuration below, tells the app to use our custom Proxy provider that will get its credential information from the "proxyUsername" and "proxyPassword" appSettings
+
 		<system.net>
 			<defaultProxy enabled="true" useDefaultCredentials="false">
-				<module type="NewRelic.Platform.Binding.DotNET.CustomProxy, NewRelic.Platform.Binding.DotNET"/>
+				<module type="NewRelic.Platform.Binding.DotNET.Proxy, NewRelic.Platform.Binding.DotNET"/>
 			</defaultProxy>
 		</system.net>
 	
-		Which will also require that you add proxyAddress, username and password to appSettings above. 
+		Which will also require that you add proxyUsername and proxyPassword to appSettings above. 
+		In addition you can optionally specify to use any proxy address by setting proxyAddress (leaving this off, the plugin will use the proxy address used configured in Windows internet options)
+
 		For example these values could be:
 		
-		<add key="proxyAddress" value="http://proxyaddress"/>
-		<add key="username" value="OFFICE\jdoe"/>
-		<add key="password" value="p@ssw0rd"/>
+		<add key="proxyUsername" value="OFFICE\jdoe"/>
+		<add key="proxyPassword" value="p@ssw0rd"/>
+
+		And if you so desire:
+		
+		<add key="proxyAddress" value="http://www.proxyaddress:5503"/>
 	-->
 
 </configuration>
